--- a/standard-layout/css/style.css
+++ b/standard-layout/css/style.css
@@ -19,6 +19,16 @@ a:link, a:visited, a:hover, a:active {
     text-decoration: none;
 }
 
+.hidden {
+    display: none;
+}
+
+.clearfix::after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
 /* header部分 */
 .header {
     width: 100%;
@@ -74,16 +84,59 @@ a:link, a:visited, a:hover, a:active {
     margin: 30px auto 40px;
 }
 
-.clearfix::after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
+/* main部分 */
 .main {
     display: block;
     float: left;
     width: 660px;
+}
+/* hot-topic部分 */
+.hot-topic {
+    display: block;
+    height: 300px;
+    margin-bottom: 300px;
+    box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.15);
+    transition: opacity 0.15s;
+}
+.hot-topic .title {
+    margin-bottom: 15px;
+    color: #fff;
+    font-weight: normal;
+    font-size: 2.0rem;
+}
+.hot-topic .desc {
+    color: #ddc;
+}
+.hot-topic .date {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 140px;
+    padding: 4px;
+    background-color: #fff;
+    color: #2d3d54;
+    text-align: center;
+    letter-spacing: 1px;
+    font-weight: bold;
+    font-size: 1.1rem;
+    line-height: 1;
+}
+.hot-topic:hover {
+    opacity: 0.85;
+}
+.hot-topic .image {
+    float: left;
+    width: 50%;
+    height: 100%;
+}
+.hot-topic .content {
+    position: relative;
+    float: right;
+    width: 50%;
+    height: 100%;
+    padding: 105px 25px 0;
+    background-color: #2d3d54;
+    line-height: 1.6;
 }
 
 .sidemenu {
